--- a/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -1,4 +1,5 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/uikit.min.css">
 <script src="js/uikit.js"></script>
+<script src="js/uikit-icons.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
