--- a/src/main/webapp/WEB-INF/jspf/item.per.page.jspf
+++ b/src/main/webapp/WEB-INF/jspf/item.per.page.jspf
@@ -1,7 +1,7 @@
 <select class="uk-select uk-width-1-4@s" id="itemsPerPage" name="items" form-field
         onchange="callPOSTRequest(3,0)">
-    <option value=5>5 items per page</option>
-    <option value=20>20 items per page</option>
-    <option value=50>50 items per page</option>
-    <option value=-1>All items</option>
+    <option value=5>5 <fmt:message key="item_per_page.items_per_page"/></option>
+    <option value=20>20 <fmt:message key="item_per_page.items_per_page"/></option>
+    <option value=50>50 <fmt:message key="item_per_page.items_per_page"/></option>
+    <option value=-1><fmt:message key="item_per_page.all_items"/></option>
 </select>
